<resources>
    <string name="app_name">NUMAD21S-CZL</string>
    <string name="about_string">About</string>
    <string name="clear_string">Clear</string>
    <string name="tap_me_string">Tap Me!</string>
    <string name="a_string">A</string>
    <string name="b_string">B</string>
    <string name="c_string">C</string>
    <string name="d_string">D</string>
    <string name="e_string">E</string>
    <string name="f_string">F</string>
    <string name="pressed_none_string">Pressed: None!</string>
    <string name="link_collector_string">Link Collector</string>
    <string name="add_links_string">add_links</string>
    <string name="button_to_add_links_string">button to add links</string>
    <string name="add_link_string">Add</string>
    <string name="cancel">Cancel</string>
    <string name="https_string">https://</string>
    <string name="enter_site_name_string">Enter Site Name</string>
    <string name="locator_string">Locator</string>
    <string name="current_longitude_string">Current Longitude</string>
    <string name="current_latitude_string">Current Latitude</string>
    <string name="locate_me_string">Locate me!</string>
    <string name="github_lookup_string">GitHub LookUp</string>
    <string name="enter_a_github_username_string">Enter a github username</string>
    <string name="find_user_string">Find User</string>
    <string name="enter_github_username_string">Enter Github Username!</string>
    <string name="email_string">Email:</string>
    <string name="public_repos_string"># Public Repos:</string>
    <string name="date_created_string">Date Created:</string>
    <string name="name_string">Name:</string>
    <string name="github_url_string">Github Url:</string>
</resources>